logs/pycdep.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/oset'...
Listing './lib/python3.5/site-packages/oset-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/path.py-10.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycdep'...
Compiling './lib/python3.5/site-packages/pycdep/CppCommentStripper.py'...
***   File "./lib/python3.5/site-packages/pycdep/CppCommentStripper.py", line 76
    print "BEFORE:"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycdep/FileNode.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (FileNode.py, line 112)
Compiling './lib/python3.5/site-packages/pycdep/IncludeFileFinder.py'...
***   File "./lib/python3.5/site-packages/pycdep/IncludeFileFinder.py", line 109
    print include_files
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycdep/ProjectResolver.py'...
***   File "./lib/python3.5/site-packages/pycdep/ProjectResolver.py", line 147
    print p.abs_node(FileNode(Options(), file_under_test), IncludeFile("test.h",'quoted'))
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycdep/pycdep.py'...
***   File "./lib/python3.5/site-packages/pycdep/pycdep.py", line 66
    print "PyCDep version %s. Program available under GPLv3 - copyright 2011 %s" % (__version__, __author__)
                                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycdep/sandbox'...
Listing './lib/python3.5/site-packages/pycdep/sandbox/tstsrc'...
Listing './lib/python3.5/site-packages/pycdep/sandbox/tstsrc/lib'...
Listing './lib/python3.5/site-packages/pycdep/template'...
Listing './lib/python3.5/site-packages/pycdep-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
